--- a/Accounts/templates/login.html
+++ b/Accounts/templates/login.html
@@ -5,7 +5,7 @@
     <h1>Log In</h1>
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <input type="submit" value="Log In">
     </form>
 {% endblock content %}
